# Serena

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: groups.rs  handler.rs  main.rs  primitives.rs  utils.rs
src/commands/: mod.rs
src/commands/general/: mod.rs  moderation.rs  ping.rs  prefix.rs
src/commands/moderation/: ban.rs  kick.rs  mod.rs  unban.rs
src/commands/util/: clear.rs  mod.rs
